--- a/src/templates/exportPdfProject.wizard.hbs
+++ b/src/templates/exportPdfProject.wizard.hbs
@@ -22,9 +22,9 @@
 			<label class="radio-inline"><input type="radio" name="header" value="0" checked="checked">{{gettext "No"}}</label>
                   
                 <label for="positionheader"></label>
-			<label class="radio-inline"><input type="radio" name="posicionH" value="headerLeft" disabled="disabled">{{gettext "Left"}}</label>
-			<label class="radio-inline"><input type="radio" name="posicionH" value="headerCenter" disabled="disabled" checked="checked">{{gettext "Center"}}</label>
-			<label class="radio-inline"><input type="radio" name="posicionH" value="headerRight" disabled="disabled">{{gettext "Right"}}</label>
+			<label class="radio-inline"><input type="radio" name="posicionH" value="left" disabled="disabled">{{gettext "Left"}}</label>
+			<label class="radio-inline"><input type="radio" name="posicionH" value="center" disabled="disabled" checked="checked">{{gettext "Center"}}</label>
+			<label class="radio-inline"><input type="radio" name="posicionH" value="right" disabled="disabled">{{gettext "Right"}}</label>
      </div>	
      
      <div id="headertextcontainer" class="form-group has-feedback">
@@ -40,9 +40,9 @@
 			<label class="radio-inline"><input type="radio" name="numeracion" value="0" checked="checked">{{gettext "No"}}</label>
                   
             <label for="positionnumber"></label>
-			<label class="radio-inline"><input type="radio" name="posicionN" value="footerLeft" disabled="disabled">{{gettext "Left"}}</label>
-			<label class="radio-inline"><input type="radio" name="posicionN" value="footerCenter" disabled="disabled" checked="checked">{{gettext "Center"}}</label>
-			<label class="radio-inline"><input type="radio" name="posicionN" value="footerRight" disabled="disabled">{{gettext "Right"}}</label>
+			<label class="radio-inline"><input type="radio" name="posicionN" value="left" disabled="disabled">{{gettext "Left"}}</label>
+			<label class="radio-inline"><input type="radio" name="posicionN" value="center" disabled="disabled" checked="checked">{{gettext "Center"}}</label>
+			<label class="radio-inline"><input type="radio" name="posicionN" value="right" disabled="disabled">{{gettext "Right"}}</label>
        </div>
     
 
@@ -61,4 +61,5 @@
 
 <div class="waitingOK" style="display:none"><font color="#FC0202"><strong>{{gettext "PDF Generation in progress. Please wait a moment..."}}</strong></font></div>
 <div class="waitingFiles" style="display:none"><font color="#FC0202"><strong>{{gettext "PDF Generation in progress. Copying interactive files..."}}</strong></font></div>
+<div class="waitingPdf" style="display:none"><font color="#FC0202"><strong>{{gettext "PDF union in progress. Please wait a moment..."}}</strong></font></div>
 <div class="waitingER" style="display:none"><font color="#FC0202"><strong>{{gettext "There was an error generating the PDF file. Please cancel de process"}}</strong></font></div>
