--- a/src/templates/exportPdfProject.wizard.hbs
+++ b/src/templates/exportPdfProject.wizard.hbs
@@ -58,8 +58,7 @@
 <button id="exportpdfback" class="btn" >{{gettext "Cancel"}}</button>
 <button id="exportpdfbtn" class="btn" disabled="disabled">{{gettext "Generate pdf"}}</button>
 </div>
-
 <div class="waitingOK" style="display:none"><font color="#FC0202"><strong>{{gettext "PDF Generation in progress. Please wait a moment..."}}</strong><div id="pdfCount"></div></font></div>
 <div class="waitingFiles" style="display:none"><font color="#FC0202"><strong>{{gettext "PDF Generation in progress. Copying interactive files..."}}</strong></font></div>
 <div class="waitingPdf" style="display:none"><font color="#FC0202"><strong>{{gettext "PDF union in progress. Please wait a moment..."}}</strong></font></div>
-<div class="waitingER" style="display:none"><font color="#FC0202"><strong>{{gettext "There was an error generating the PDF file."}}</strong><div id="pdfErr"></div></font></div>
+<div class="waitingER" style="display:none"><font color="#FC0202"><strong>{{gettext "There was an error generating the PDF file. Please cancel the process"}}</strong><div id="messageError"></div></font></div>
