--- a/src/themes/editor/default/css/99-main.css
+++ b/src/themes/editor/default/css/99-main.css
@@ -128,6 +128,10 @@ body{
     height: 30px;
 }
 
+#navactions{
+    min-height: 43px;
+}
+
 #navactions button{
     max-height: 40;
     position: relative;
