update to new nwjs format

--- a/src/templates/exportHtmlProject.wizard.hbs
+++ b/src/templates/exportHtmlProject.wizard.hbs
@@ -1,7 +1,7 @@
 <div id="exportHtmlProject" class="form-group has-feedback">
     <div>
 		<label>{{gettext "Path where save html project"}}</label>
-		<input name="path" value='{{gettext "Choose folder"}}' type="file" nwsaveas="index.html" webkitdirectory directory /> 
+		<input name="path" value='{{gettext "Choose folder"}}' type="file" nwdirectory /> 
     </div>
 	<button id="exporthtmlback">{{gettext "Cancel"}}</button>
 	<button id="exporthtmlbtn">{{gettext "Generate html"}}</button>
