--- a/src/components/core/fillinthegaps/lib_external/jsGeorK/jsgeork/jquery.jsgeork.css
+++ b/src/components/core/fillinthegaps/lib_external/jsGeorK/jsgeork/jquery.jsgeork.css
@@ -34,9 +34,9 @@
     margin-bottom: 1em;
     border: medium outset silver;
     border-radius: 10px;
-    box-shadow: 8px 8px 5px 2px #888888;
+    /* box-shadow: 8px 8px 5px 2px #888888;
     -moz-box-shadow: 8px 8px 5px 2px #888888;
-    -webkit-box-shadow: 8px 8px 5px 2px #888888;
+    -webkit-box-shadow: 8px 8px 5px 2px #888888; */
     letter-spacing: 0.05em;
     word-spacing: 0.3em;
     font-family: 'Segoe UI' , Tahoma, Geneva, Verdana, sans-serif;
