--- a/src/components/core/interactivemultioption/lib_external/jsgeork/jquery.jsgeork.css
+++ b/src/components/core/interactivemultioption/lib_external/jsgeork/jquery.jsgeork.css
@@ -32,11 +32,13 @@
 .CSSActFieldset, .CSSTestFieldset {
     margin-top: 0em;
     margin-bottom: 1em;
-    border: medium outset silver;
+    /* border: medium outset silver;
     border-radius: 10px;
     box-shadow: 8px 8px 5px 2px #888888;
     -moz-box-shadow: 8px 8px 5px 2px #888888;
-    -webkit-box-shadow: 8px 8px 5px 2px #888888;
+    -webkit-box-shadow: 8px 8px 5px 2px #888888; */
+    border-radius: 4px;
+    box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.3), 0 1px 3px 0 rgba(0,0,0,.3);
     letter-spacing: 0.05em;
     word-spacing: 0.3em;
     font-family: 'Segoe UI' , Tahoma, Geneva, Verdana, sans-serif;
@@ -72,9 +74,9 @@ list-style-type: lower-latin;
 .CSSActivity ul {
 list-style-type: square;
 }
-.CSSActivity button {
+/* .CSSActivity button {
     margin-top: 1em;
-}
+} */
 
 /*	------------------------------
 	estilo para la ayuda con los aciertos en las actividades tipo multi
@@ -239,10 +241,7 @@ fieldset .CSSInfoTextPtt {
 	Inputs de texto
 	------------------------------ */
 .CSSActivityOptOk {
-    background-color: #99FF99;
-    border: thin solid #33CC33;
-    border-radius: 8px;
-    box-shadow: 8px 8px 5px #888888;
+
 }
 .CSSActivityOptOk.glyphs:before {
     font-size: 1.7em;
@@ -262,7 +261,7 @@ fieldset .CSSInfoTextPtt {
     font-size: 1.7em;
     margin-left: -1em;
     pointer-events: none;
-    color: red;
+    color: #E83F2F;
     vertical-align: middle;
     content: "\2716";    /*cross*/
 }
@@ -443,8 +442,8 @@ fieldset .CSSInfoTextPtt {
 	------------------------------ */
 .CSSActGapFillOutEndKo {
     padding: 1em;
-    border: thick ridge #FF0000;
-    background-color: #FFCCCC;
+    border: thick ridge #E83F2F;
+    background-color: #ffc9a6;
     display: table;
     margin-right: auto;
     margin-left: auto;
@@ -606,25 +605,31 @@ fieldset .CSSInfoTextPtt {
     CSSTrainCtrlLast = estilo para chequear la actividad siguiente cuando flow=train
 	------------------------------ */
 .CSSTestBtnSubmit, .CSSTrainCtrlNext, .CSSTrainCtrlLast, .CSSSlideCtrlPrev, .CSSSlideCtrlNext, .CSSActivityButton, .CSSActGapFillBtnHint, .CSSActInputBtnHint {
-    border: 1px solid #009900;
+    border: 1px solid #15805D;
     padding: 0.5em;
     padding-left: 2em;
     padding-right: 2em;
-    border-radius: 20px;
-    background-color: #009900;
+    border-radius: 4px;
+    background-color: #15805D;
     color: #FFFFFF;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: medium;
     cursor: pointer;
     margin: 0.1em;
+    transition: box-shadow 0.3s ease-in-out;
+    transition: -webkit-box-shadow 0.3s ease-in-out;
 }
 .CSSTestBtnSubmit, .CSSActivityButton {
     margin-bottom: 1em;
 }
 .CSSTestBtnSubmit:hover:enabled, .CSSTrainCtrlNext:hover:enabled, .CSSTrainCtrlLast:hover:enabled, .CSSSlideCtrlPrev:hover:enabled, .CSSSlideCtrlNext:hover:enabled, .CSSActivityButton:hover:enabled {
-    background-color: #33CC33; 
-    box-shadow: 2px 2px 5px #888888;
+    background-color: #15805D; 
+    transition: box-shadow 0.3s ease-in-out;
+    transition: -webkit-box-shadow 0.3s ease-in-out;
+    -webkit-box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.6);
+    -moz-box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.6);
+    box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.6);
 }
 .CSSTestBtnSubmit:disabled, .CSSTrainCtrlNext:disabled, .CSSTrainCtrlLast:disabled, .CSSSlideCtrlPrev:disabled, .CSSSlideCtrlNext:disabled, .CSSActivityButton:disabled, .CSSActGapFillBtnHint:disabled, .CSSActInputBtnHint:disabled {
     border: 1px solid #999999;
@@ -637,14 +642,18 @@ fieldset .CSSInfoTextPtt {
 	CSSActInputBtnHint = estilo para el botón hint en las actividades de cuadro de texto
 	------------------------------ */
 .CSSActGapFillBtnHint, .CSSActInputBtnHint {
-    border: 1px solid #009900;
-    background-color: #CCFF99;
-    color: #009900;
+    background-color: #5693AB;
+    color: #ffffff;
+    transition: box-shadow 0.3s ease-in-out;
+    transition: -webkit-box-shadow 0.3s ease-in-out;
 }
 .CSSActGapFillBtnHint:hover:enabled, .CSSActInputBtnHint:hover:enabled {
-    background-color: #33CC33; 
-    box-shadow: 2px 2px 5px #888888;
+    transition: box-shadow 0.3s ease-in-out;
+    transition: -webkit-box-shadow 0.3s ease-in-out;
     color: white;
+    -webkit-box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.6);
+    -moz-box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.6);
+    box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.6);
 }
 .CSSActGapFillBtnHint:disabled, .CSSActInputBtnHint:disabled {
     border: none;
