--- a/src/templates/initialwizard.step2.hbs
+++ b/src/templates/initialwizard.step2.hbs
@@ -4,6 +4,6 @@
 	<span id="validateindicator" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 	<span id="inputSuccess2Status" class="sr-only">(success)</span>
 </div>
-<button id="advprojbtn" disabled="disabled">{{gettext "Advanced Project"}}</button>
+<button id="advprojbtn" disabled="disabled">{{gettext "Accept"}}</button>
 <button id="smplprojbtn" disabled="disabled" style="display:none">{{gettext "Simple Project"}}</button>
 <button id="wzrdgoback">{{gettext "Cancel"}}</button>
